--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
-<!DOCTYPE HTML>
 <html>
 <body>
 
-<video width="320" height="240" controls="controls">
-  <source src="movie.ogg" type="video/ogg">
-  <source src="movie.mp4" type="video/mp4">
-Your browser does not support the video tag.
-</video>
+<h1>My First Heading</h1>
+
+<p>My first paragraph.</p>
 
 </body>
 </html>
