--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
-<?php
-echo "Hello World";
-?>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>首页</title>
+</head>
+<body>
+Hello，World！
+</body>
+</html>
