--- a/index.html
+++ b/index.html
@@ -3,5 +3,10 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+  <audio controls="controls" height="100" width="100">
+  <source src="http://other.web.re01.sycdn.kuwo.cn/resource/n3/75/88/1814616326.mp3" type="audio/mp3" />
+  <source src="song.ogg" type="audio/ogg" />
+<embed height="100" width="100" src="song.mp3" />
+</audio>
 </body>
 </html>
