--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
    <audio controls="controls" height="100" width="100">
   <source src="http://other.web.re01.sycdn.kuwo.cn/resource/n3/75/88/1814616326.mp3" type="audio/mp3" />
   <source src="song.ogg" type="audio/ogg" />
-<embed height="100" width="100" src="song.mp3" />
+<embed height="100" width="100" src="http://other.web.re01.sycdn.kuwo.cn/resource/n3/75/88/1814616326.mp3" />
+</audio>
+   
+<audio controls="controls" loop="loop">
+  <source src="song.ogg" type="audio/ogg" />
+  <source src="http://other.web.re01.sycdn.kuwo.cn/resource/n3/75/88/1814616326.mp3" type="audio/mpeg" />
+Your browser does not support the audio element.
 </audio>
 </body>
 </html>
