--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
 <body>
+ .center
+{
+margin-left:auto;
+margin-right:auto;
+width:70%;
+background-color:#b0e0e6;
+}
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
  
