--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <title>Home · lhxyz/lhxyz.github.io · GitHub</title>
+  <title>Home · https://lhxyz.github.io · GitHub</title>
 <body>
 
 <h1>Hello World</h1>
