--- a/index.html
+++ b/index.html
@@ -2,7 +2,16 @@
 <html>
   <title>Home · https://lhxyz.github.io · GitHub</title>
 <body>
-
+  
+<style> 
+div
+{
+	width:300px;
+	height:100px;
+	background-color:yellow;
+	box-shadow: 10px 10px 5px #888888;
+}
+</style>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
  
