--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
+<head>
+<meta charset="utf-8">
   <title>Home · https://lhxyz.github.io · GitHub</title>
 	
-	<style> 
-div
-{
-	width:300px;
-	height:100px;
-	background-color:yellow;
-	box-shadow: 10px 10px 5px #888888;
+<style>
+#example1 {
+    background-image: url(img_flwr.gif), url(paper.gif);
+    background-position: right bottom, left top;
+    background-repeat: no-repeat, repeat;
+    padding: 15px;
 }
 </style>
+</head>
 <body>
 	
 <h1>Hello World</h1>
