--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Home · https://lhxyz.github.io · GitHub</title>
 	
 <style>
+	h1 {text-align: center
 #example1 {
     background-image: url(img_flwr.gif), url(paper.gif);
     background-position: right bottom, left top;
