--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
         <a href="screenshots/quick-edit.png">
             <img alt="A screenshot showing CSS Quick Edit" src="screenshots/quick-edit.png" />
         </a>
-        <audio controls="controls" loop="loop">
+       <div>  
+       <audio controls="controls" loop="loop">
   <source src="http://other.web.re01.sycdn.kuwo.cn/resource/n3/75/88/1814616326.mp3" type="audio/mpeg" />
 Your browser does not support the audio element.
          </audio>
+       </div>
         <p class="note">
             Today, Brackets only supports Live Preview for HTML and CSS. However, in the current version, changes to
             JavaScript files are automatically reloaded when you save. We are currently working on Live Preview
