--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="screenshots/quick-edit.png">
             <img alt="A screenshot showing CSS Quick Edit" src="screenshots/quick-edit.png" />
         </a>
-       <div>  
+       <div class="audio">  
        <audio controls="controls" loop="loop">
   <source src="http://other.web.re01.sycdn.kuwo.cn/resource/n3/75/88/1814616326.mp3" type="audio/mpeg" />
 Your browser does not support the audio element.
