--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>GETTING STARTED WITH BRACKETS</title>
+        <title>GitHub Pages | https://lhxyz.github.io</title>
         <meta name="description" content="An interactive getting started guide for Brackets.">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         
-        <h1>GETTING STARTED WITH BRACKETS</h1>
-        <h2>This is your guide!</h2>
+        <h1>Hello World</h1>
+        <h2>I'm hosted with GitHub Pages.</h2>
         
  
         <a href="screenshots/quick-edit.png">
