--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>GitHub Pages | https://lhxyz.github.io</title>
         <meta name="description" content="An interactive getting started guide for Brackets.">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="bootstrap-4.1.0-dist/css/bootstrap.min.css">
     </head>
     <body>
         
