--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ Your browser does not support the audio element.
             <li><a href="https://twitter.com/brackets">@brackets on Twitter</a></li>
             <li>Chat with Brackets developers on IRC in <a href="http://webchat.freenode.net/?channels=brackets&uio=d4">#brackets on Freenode</a></li>
         </ul>
-        
+        <script src="bootstrap-4.1.0-dist/jquery-3.3.1.min.js"></script>
+        <script src="bootstrap-4.1.0-dist/js/bootstrap.min.js"></script>
     </body>
 </html>
