--- a/lhxyz.html
+++ b/lhxyz.html
@@ -18,7 +18,8 @@ Your browser does not support the audio element.
 </audio>
 
 </div>
-
+<br />
+<a href="index.html">https://lhxyz.github.io · GitHub</a>
 </body>
 </html>
 
