--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ Your browser does not support the audio element.
         
         
         <ul>
-            <li><a href="Jiwei Fang-The_story_of_love.html">Brackets.io</a></li>
+            <li><a href="Jiwei_Fang-The_story_of_love.html">Brackets.io</a></li>
             <li><a href="http://blog.brackets.io">Brackets Team Blog</a></li>
             <li><a href="https://github.com/adobe/brackets">Brackets on GitHub</a></li>
             <li><a href="https://brackets-registry.aboutweb.com">Brackets Extension Registry</a></li>
