--- a/Jiwei_Fang-The_story_of_love.html
+++ b/Jiwei_Fang-The_story_of_love.html
@@ -17,7 +17,7 @@
         <p>Jiwei Fang-The story of love</p>
         
     <div class="img">   
-        <a href="screenshots/quick-edit.png">
+        <a href="index.html">
             <img alt="A screenshot showing CSS Quick Edit" src="screenshots/quick-edit.png" />
         </a>
     </div>
