--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h2>I'm hosted with GitHub Pages.</h2>
         
  
-        <a href="screenshots/quick-edit.png">
+        <a href="index.html">
             <img alt="A screenshot showing CSS Quick Edit" src="screenshots/quick-edit.png" />
         </a>
        <div class="audio">  
