--- a/lhxyz.html
+++ b/lhxyz.html
@@ -11,7 +11,7 @@
 <p>I'm hosted with GitHub Pages.</p>
      
     <div class="img">   
-        <a href="screenshots/quick-edit.png">
+        <a href="index.html">
             <img alt="A screenshot showing CSS Quick Edit" src="screenshots/quick-edit.png" />
         </a>
     </div>
