--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Your browser does not support the audio element.
         
         <ul>
             <li><a href="Jiwei_Fang-The_story_of_love.html">Brackets.io</a></li>
-            <li><a href="島みゆき-ひとり上手.html">Brackets Team Blog</a></li>
+            <li><a href="中島みゆき-ひとり上手.html">Brackets Team Blog</a></li>
             <li><a href="https://github.com/adobe/brackets">Brackets on GitHub</a></li>
             <li><a href="https://brackets-registry.aboutweb.com">Brackets Extension Registry</a></li>
             <li><a href="https://github.com/adobe/brackets/wiki">Brackets Wiki</a></li>
