--- a/lhxyz.html
+++ b/lhxyz.html
@@ -35,7 +35,7 @@ Your browser does not support the audio element.
         <div class="link">
           
             <a href="index.html">Brackets.io</a> -
-            <a href="島みゆき-ひとり上手.html">Brackets Team Blog</a> -
+            <a href="中島みゆき-ひとり上手.html">Brackets Team Blog</a> -
             <a href="https://github.com/adobe/brackets">Brackets on GitHub</a> -
             <a href="https://brackets-registry.aboutweb.com">Brackets Extension Registry</a> -
             <a href="https://github.com/adobe/brackets/wiki">Brackets Wiki</a> -
