--- a/中島みゆき-ひとり上手.html
+++ b/中島みゆき-ひとり上手.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf島みゆき-ひとり上手-8">
-  <title>Home · https://lhxyz.github.io · GitHub</title>
+<meta charset="utf-8">
+  <title>中島みゆき-ひとり上手</title>
   <link rel="stylesheet" href="bootstrap-4.1.0-dist/css/bootstrap.min.css">
 </head>
 <body>
 
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-    <p>島みゆき-ひとり上手 </p>
+    <p>中島みゆき-ひとり上手 </p>
     <br />
     <div class="img">   
         <a href="index.html">
