--- a/lhxyz.html
+++ b/lhxyz.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-  <title>Home · https://lhxyz.github.io · GitHub</title>
+  <title>GitHub Pages | https://lhxyz.github.io</title>
   <link rel="stylesheet" href="bootstrap-4.1.0-dist/css/bootstrap.min.css">
 </head>
 <body>
@@ -34,8 +34,8 @@ Your browser does not support the audio element.
 <br />
         <div class="link">
           
-            <a href="index.html">Brackets.io</a> -
-            <a href="中島みゆき-ひとり上手.html">Brackets Team Blog</a> -
+            <a href="http://brackets.io">Brackets.io</a> -
+            <a href="http://blog.brackets.io">Brackets Team Blog</a> -
             <a href="https://github.com/adobe/brackets">Brackets on GitHub</a> -
             <a href="https://brackets-registry.aboutweb.com">Brackets Extension Registry</a> -
             <a href="https://github.com/adobe/brackets/wiki">Brackets Wiki</a> -
