--- a/list/中島みゆき-ひとり上手.html
+++ b/list/中島みゆき-ひとり上手.html
@@ -73,7 +73,7 @@ Your browser does not support the audio element.
 <br />
         <div class="link">
           
-            <a href="index.html">Brackets.io</a> -
+            <a href="http://brackets.io">Brackets.io</a> -
             <a href="http://blog.brackets.io">Brackets Team Blog</a> -
             <a href="https://github.com/adobe/brackets">Brackets on GitHub</a> -
             <a href="https://brackets-registry.aboutweb.com">Brackets Extension Registry</a> -
