--- a/list/中島みゆき-ひとり上手.html
+++ b/list/中島みゆき-ひとり上手.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
   <title>中島みゆき-ひとり上手</title>
-  <link rel="stylesheet" href="bootstrap-4.1.0-dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../bootstrap-4.1.0-dist/css/bootstrap.min.css">
 </head>
 <body>
 
@@ -12,8 +12,8 @@
     <p>中島みゆき-ひとり上手 </p>
     <br />
     <div class="img">   
-        <a href="index.html">
-            <img alt="A screenshot showing CSS Quick Edit" src="screenshots/quick-edit.png" />
+        <a href="../index.html">
+            <img alt="A screenshot showing CSS Quick Edit" src="../screenshots/quick-edit.png" />
         </a>
     </div>
     <br />
@@ -85,9 +85,9 @@ Your browser does not support the audio element.
         
         </div> 
         
-          <script src="bootstrap-4.1.0-dist/jquery-3.3.1.min.js"></script>
-        <script src="bootstrap-4.1.0-dist/popper.min.js"></script>
-        <script src="bootstrap-4.1.0-dist/js/bootstrap.min.js"></script> 
+          <script src="../bootstrap-4.1.0-dist/jquery-3.3.1.min.js"></script>
+        <script src="../bootstrap-4.1.0-dist/popper.min.js"></script>
+        <script src="../bootstrap-4.1.0-dist/js/bootstrap.min.js"></script> 
 </body>
 </html>
 
