--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
       <meta charset="utf-8"> 
       <title>GitHub Pages | https://lhxyz.github.io</title>
-      <link rel="stylesheet" href="bootstrap-4.1.0-dist/css/bootstrap.min.css">
+      <link rel="stylesheet" href="../bootstrap-4.1.0-dist/css/bootstrap.min.css">
 </head>
    
     <body>
@@ -13,8 +13,8 @@
         <h2>I'm hosted with GitHub Pages.</h2>
         
  
-        <a href="index.html">
-            <img alt="A screenshot showing CSS Quick Edit" src="screenshots/quick-edit.png" />
+        <a href="../index.html">
+            <img alt="A screenshot showing CSS Quick Edit" src="../screenshots/quick-edit.png" />
         </a>
        <div class="audio">  
        <audio controls="controls" loop="loop">
@@ -40,8 +40,8 @@ Your browser does not support the audio element.
             <li><a href="https://twitter.com/brackets">@brackets on Twitter</a></li>
             <li>Chat with Brackets developers on IRC in <a href="http://webchat.freenode.net/?channels=brackets&uio=d4">#brackets on Freenode</a></li>
         </ul>
-        <script src="bootstrap-4.1.0-dist/jquery-3.3.1.min.js"></script>
-        <script src="bootstrap-4.1.0-dist/popper.min.js"></script>
-        <script src="bootstrap-4.1.0-dist/js/bootstrap.min.js"></script>
+        <script src="../bootstrap-4.1.0-dist/jquery-3.3.1.min.js"></script>
+        <script src="../bootstrap-4.1.0-dist/popper.min.js"></script>
+        <script src="../bootstrap-4.1.0-dist/js/bootstrap.min.js"></script>
     </body>
 </html>
