--- a/list/Chou_chill-a_heart_pain_once_again.html
+++ b/list/Chou_chill-a_heart_pain_once_again.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 <meta charset="utf-8">
-  <title>GitHub Pages | https://lhxyz.github.io</title>
+  <title>Chou chill - a heart pain once again</title>
   <link rel="stylesheet" href="../bootstrap-4.1.0-dist/css/bootstrap.min.css">
 </head>
 <body>
 
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-     
+     <p>Chou chill - a heart pain once again</p>
     <div class="img">   
         <a href="../index.html">
             <img alt="A screenshot showing CSS Quick Edit" src="../screenshots/quick-edit.png" />
