--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ oCurtime.innerHTML=oPlayer.currentTime;
         <a href="../index.html">
             <img alt="A screenshot showing CSS Quick Edit" src="../screenshots/quick-edit.png" />
         </a>
-       <div class="audio">
+       <div class="video">
         <audio id="player" src="https://lh-thinkpad.oss-cn-hangzhou.aliyuncs.com/dj.shqh.mp3" ></audio>
       </div>
       <div class="controls">
