--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ oCurtime.innerHTML=oPlayer.currentTime;
       <div class="controls">
         <input type="button" value="Play" id="video-btn">
         <span id="curtime">0</span>/<span id="duration">0</span></div>
-    </div>
+    <div>
        </div>
         <p class="note">
             Today, Brackets only supports Live Preview for HTML and CSS. However, in the current version, changes to
