--- a/index.html
+++ b/index.html
@@ -36,13 +36,14 @@ oCurtime.innerHTML=oPlayer.currentTime;
         <a href="../index.html">
             <img alt="A screenshot showing CSS Quick Edit" src="../screenshots/quick-edit.png" />
         </a>
+       <divclass="lhxyz">   
        <div class="video">
         <audio id="player" src="https://lh-thinkpad.oss-cn-hangzhou.aliyuncs.com/dj.shqh.mp3" ></audio>
       </div>
       <div class="controls">
         <input type="button" value="Play" id="video-btn">
         <span id="curtime">0</span>/<span id="duration">0</span></div>
-    <div>
+    
        </div>
         <p class="note">
             Today, Brackets only supports Live Preview for HTML and CSS. However, in the current version, changes to
