--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@ oCurtime.innerHTML=oPlayer.currentTime;
         <a href="../index.html">
             <img alt="A screenshot showing CSS Quick Edit" src="../screenshots/quick-edit.png" />
         </a>
-       <divclass="lhxyz">   
+       <div class="lhxyz">   
        <div class="video">
-        <audio id="player" src="https://lh-thinkpad.oss-cn-hangzhou.aliyuncs.com/dj.shqh.mp3" ></audio>
+        <audio id="player" src="dj.shqh.mp3" ></audio>
       </div>
       <div class="controls">
         <input type="button" value="Play" id="video-btn">
