--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ oCurtime.innerHTML=oPlayer.currentTime;
             <img alt="A screenshot showing CSS Quick Edit" src="../screenshots/quick-edit.png" />
         </a>
       <div class="video">
-        <audio id="player" src="https://lh-thinkpad.oss-cn-hangzhou.aliyuncs.com/dj.shqh.mp3" ></audio>
+        <audio id="player" src="li.mp3" ></audio>
       </div>
       <div class="controls">
         <input type="button" value="Play" id="video-btn">
